cabal-version:      2.4
name:               dragonskell
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           A C compiler written in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Kyle Coffey
maintainer:         me@phytolizer.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

library
    exposed-modules:  Dragon

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        optparse-applicative ^>=0.17.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable dragonskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        dragonskell

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite dragonskell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    -- hs-source-dirs:
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.14.3.0,
        dragonskell
